# FIIT_FA_SP_IK

./: CMakeLists.txt
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: allocator_boundary_tags_tests.cpp
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_buddies_system/tests/: allocator_buddies_system_tests.cpp
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
arithmetic/big_integer/include/: big_int.h
arithmetic/big_integer/src/: big_int.cpp
arithmetic/big_integer/tests/Karatsuba_multiplication/: Karatsuba_multiplication_tests.cpp
arithmetic/big_integer/tests/big_integer/: big_integer_tests.cpp
arithmetic/fraction/include/: fraction.h
arithmetic/fraction/src/: fraction.cpp
arithmetic/fraction/tests/: meow_test_fraction.cpp
associative_container/search_tree/binary_search_tree/include/: binary_search_tree.h
associative_container/search_tree/binary_search_tree/tests/: binary_search_tree_tests.cpp
logger/client_logger/include/: client_logger.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/server_logger/: CMakeLists.txt
logger/server_logger/include/: server_logger.h  server_logger_builder.h
logger/server_logger/src/: server_logger.cpp  server_logger_builder.cpp
logger/server_logger/tests/: CMakeLists.txt  server.cpp  server.h
(+7 files in other folders)
